# taskhub

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  PRD.md  README.md  TASKS.md  clippy.toml  deny.toml
.claude/: settings.json
.claude/agents/: rust-test-generator.md
.cursor/rules/: development-rules.mdc
.github/workflows/: rust.yml  security.yml
ansi-examples/: color-1.txt  color_test.txt  lolcat-1.txt  lolcat-2.txt  lolcat-3.txt  progress_demo.py  show-progress-advanced.txt  show-progress-simple.txt  test_ansi.txt
config/: Settings.toml
docs/: architecture.md
src/: history.rs  lib.rs  main.rs
src/cli/: parser.rs
src/config/: settings.rs
src/db/: mod.rs  models.rs  operations.rs
src/db/migrations/: 0001_create_tasks_table.sql
src/integrations/: mod.rs
src/integrations/github/: mod.rs
src/tui/: ansi_parser.rs  app.rs  completion.rs  mod.rs
src/tui/views/: mod.rs  task_list.rs  terminal.rs
tests/: ansi_color_fix_test.rs  ansi_color_test.rs  app_tests.rs  auto_suggestion_tests.rs  builtin_command_tests.rs  carriage_return_fix_test.rs  clear_integration_test.rs  clear_screen_test.rs  clipboard_backend_test.rs  clipboard_integration_test.rs  color_demonstration.rs  color_regression_test.rs  command_filtering_tests.rs  command_output_issue_test.rs  config_tests.rs  coordinate_mapping_debug.rs  copy_paste_tests.rs  ctrl_r_integration_test.rs  cursor_movement_integration_test.rs  cursor_movement_tests.rs  database_tests.rs  db_operations.rs  debug_indentation_test.rs  git_indentation_test.rs  git_pattern_test.rs  key_handling_behavior_test.rs  keyboard_input_tests.rs  mouse_coordinate_test.rs  mouse_selection_test.rs  output_search_tests.rs  pty_color_test.rs  realistic_coordinate_test.rs  reverse_search_tests.rs  rgb_indexed_color_test.rs  scroll_mouse_test.rs  shift_key_test.rs  tab_completion_tests.rs  tab_handling_test.rs  tty_output_behavior_test.rs  whitespace_preservation_test.rs  (+1 more)
