[package]
name = "taskhub"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26.1", features = ["all-widgets"] }

sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12.4", features = ["json"] }
oauth2 = "4.4.0"
keyring = "2.3.2"
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dirs = "5.0.1"

