[package]
name = "taskhub"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "*"
ratatui = { version = "*", features = ["all-widgets"] }

sqlx = { version = "*", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
reqwest = { version = "*", features = ["json"] }
oauth2 = "*"
keyring = "*"
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
config = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
thiserror = "*"
uuid = { version = "*", features = ["v4", "serde"] }
dirs = "*"
chrono = { version = "*", features = ["serde"] }
arboard = { version = "*", features = ["wayland-data-control"] }
regex = "*"
ansi-to-tui = "*"
